Fix Array.toList